@@ -5,7 +5,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -14,14 +13,12 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;   // ✅ servlet용
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
 
@@ -32,60 +29,90 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-    // ✅ filterChain은 "하나만"
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
-                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .formLogin(form -> form.disable())
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // 정적/이미지 리소스 허용
+                        .requestMatchers("/img/**", "/css/**", "/js/**").permitAll()
+                        .requestMatchers("/api/images/**").permitAll()
+                        .requestMatchers("/api/imgs/**").permitAll()
+                        .requestMatchers("/gogiImage/**").permitAll()
+                        .requestMatchers("/api/download/**").permitAll()
+
+                        .requestMatchers(HttpMethod.GET, "/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.POST, "/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PATCH, "/api/admin/**").hasRole("ADMIN")
                         .requestMatchers(
-                                "/img/**", "/images/**", "/static/**", "/favicon.ico", "/error",
-                                "/gogiImage/**", "/uploads/**", "/api/images/**", "/api/imgs/**"
-                        ).permitAll()
+                            "/api/wishlist/user/**",
+                            "/api/wishlist/migrate",
+                            "/api/cart/user/**",
+                            "/api/cart/migrate"
+                        ).hasRole("USER")
 
-                        // 상세이미지 목록은 공개
-                        .requestMatchers(HttpMethod.POST, "/api/products/*/images/list").permitAll()
-                        // 상세이미지 업로드는 관리자
-                        .requestMatchers(HttpMethod.POST, "/api/products/*/images/upload").hasRole("ADMIN")
-
-                        // CORS preflight
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                        // (예시) 공개 API
-                        .requestMatchers(HttpMethod.POST,
-                                "/api/login", "/api/join",
-                                "/api/find-id", "/api/find-id-by-email",
-                                "/api/request-password-reset", "/api/verify-user-for-password-reset", "/api/reset-password"
-                        ).permitAll()
-                        .requestMatchers(HttpMethod.GET,
+                        .requestMatchers("/api/admin/**").authenticated()
+                        .requestMatchers(
+                                "/api/me",
+                                "/api/login",
+                                "/api/join",
+                                "/api/email/**",
+                                "/api/sms/**",
                                 "/api/products/**",
-                                "/api/notices/**",
-                                "/api/qna/**",
-                                "/api/reviews/**",
+                                "/api/wishlist/guest/**",
                                 "/api/search/**",
-                                "/api/inquiry/**"
+                                "/api/notices/**",
+                                "/api/reviews/**",
+                                "/api/inquiry/**",
+                                "/api/find-id",
+                                "/api/find-id-by-email",
+                                "/api/request-password-reset",
+                                "/api/verify-user-for-password-reset",
+                                "/api/reset-password",
+                                "/api/cart/**"
                         ).permitAll()
 
-                        // 나머지는 프로젝트 상황에 따라 결정
-                        .anyRequest().permitAll()   // ⚠️ 개발 편의. 필요시 authenticated()로 변경
+                        .requestMatchers(HttpMethod.POST, "/api/payment/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/payment/**").permitAll()
+                        .requestMatchers(HttpMethod.PUT, "/api/payment/**").permitAll()
+                        .requestMatchers(HttpMethod.DELETE, "/api/payment/**").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/api/payment/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/products/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/uqna").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/uqna").authenticated()
+
+                        .anyRequest().authenticated()
                 )
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()));
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    private CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(List.of("http://localhost:3000", "http://127.0.0.1:3000"));
-        cfg.setAllowedMethods(List.of("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(List.of("*"));
-        cfg.setAllowCredentials(true);
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://127.0.0.1:3000",
+                "http://localhost:80",
+                "http://127.0.0.1:80",
+                "https://service.iamport.kr",
+                "https://api.iamport.kr"
+        ));
+
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+        configuration.setAllowCredentials(true);
+        configuration.addAllowedHeader("*");
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
+        source.registerCorsConfiguration("/api/**", configuration);
         return source;
     }
 }
